# quantum-ads-mcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONNECTORS.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  google-ads.yaml.example  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release-please.yml  sbom-attest.yml  scorecard.yml
docs/: LIVE_VALIDATION.md  LIVE_VALIDATION_RESULTS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-sovereign-core-and-connectors.md  0003-smoke-gated-sdk-boundary.md  README.md
scripts/: get_refresh_token.py
skill/quantum-ads/: SKILL.md
skill/quantum-ads/references/: auth-and-guardrails.md  gaql-and-payloads.md  google-ads-2026-sota.md  tool-catalog.md
src/quantum_ads/: __init__.py  __main__.py  server.py
src/quantum_ads/connectors/: __init__.py
src/quantum_ads/connectors/adh/: __init__.py  connector.py  queries.py  query_ops.py  sdk.py  types.py
src/quantum_ads/connectors/bigquery/: __init__.py  connector.py  cost.py  read_tools.py  sdk.py  types.py  write_ops.py
src/quantum_ads/connectors/cm360/: __init__.py  catalogs.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/datamanager/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/dv360/: __init__.py  catalogs.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/ga4/: __init__.py  sdk.py
src/quantum_ads/connectors/gbp/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/google_ads/: __init__.py  sdk.py
src/quantum_ads/connectors/gtm/: __init__.py  connector.py  sdk.py
src/quantum_ads/connectors/language/: __init__.py  connector.py  language_tools.py  sdk.py  types.py
src/quantum_ads/connectors/looker/: __init__.py  connector.py  read_tools.py  sdk.py  types.py  write_ops.py
src/quantum_ads/connectors/merchant/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/meridian/: __init__.py  connector.py  mmm_tools.py  sdk.py  types.py
src/quantum_ads/connectors/recaptcha/: __init__.py  builders.py  connector.py  read_tools.py  sdk.py  types.py
src/quantum_ads/connectors/sa360/: __init__.py  connector.py  conversion_ops.py  queries.py  sdk.py  types.py
src/quantum_ads/connectors/searchconsole/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/trends/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/vertex/: __init__.py  connector.py  gen_tools.py  sdk.py  types.py
src/quantum_ads/connectors/workspace/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/connectors/youtube/: __init__.py  connector.py  sdk.py  types.py
src/quantum_ads/core/: __init__.py  context.py  models.py
src/quantum_ads/core/auth/: __init__.py  multitenant.py  secret_store.py  tenant.py
src/quantum_ads/core/mcp/: __init__.py  register.py
tests/integration_mock/: test_adh_read.py  test_adh_write.py  test_bigquery_read.py  test_bigquery_write.py  test_change_history.py  test_cm360_read.py  test_cm360_write.py  test_connector.py  test_connector_selection.py  test_connector_tools_invoke.py  test_datamanager_connector.py  test_datamanager_read.py  test_datamanager_write.py  test_dv360_read.py  test_dv360_write.py  test_ga4_admin.py  test_ga4_read.py  test_ga4_write.py  test_gaql_error_handling.py  test_gaql_tool.py  test_gbp_read.py  test_gbp_write.py  test_gtm_read.py  test_gtm_write.py  test_language_builders.py  test_language_read.py  test_looker_read.py  test_looker_write.py  test_merchant_connector.py  test_merchant_read.py  test_merchant_write.py  test_meridian_read.py  test_recaptcha_read.py  test_recaptcha_write.py  test_report_tools.py  test_sa360_read.py  test_sa360_write.py  test_searchconsole_read.py  test_searchconsole_write.py  test_server_boot.py  (+8 more)
tests/live_smoke/: conftest.py  meridian_smoke.py  test_adh_live.py  test_bigquery_live.py  test_cm360_live.py  test_discovery_conformance.py  test_dv360_live.py  test_ga4_live.py  test_gbp_live.py  test_google_ads_live.py  test_google_ads_reports_live.py  test_gtm_live.py  test_language_live.py  test_merchant_live.py  test_recaptcha_live.py  test_sa360_live.py  test_searchconsole_live.py  test_trends_live.py  test_vertex_live.py  test_youtube_live.py
tests/unit/: test_audit.py  test_confirm.py  test_enums.py  test_fields.py  test_gaql_builder.py  test_gaql_validator.py  test_mode.py  test_multitenant.py  test_mutate_tools.py  test_quota.py  test_recorder.py  test_registry.py  test_remote_session.py  test_runner.py  test_secret_store.py  test_tenant.py  test_token.py  test_version_manager.py
(+102 files in other folders)
