[project]
name = "quantum-ads-mcp"
version = "0.1.0"
description = "Sovereign Google marketing agency control plane over MCP (Google Ads v24, June 2026 SOTA)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Julien Compain" }]
dependencies = [
  "fastmcp>=2.9",
  "mcp>=1.9",
  "google-ads>=27",
  "pydantic>=2.7,<3",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5",
  "pytest-mock>=3.14",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
quantum-ads-mcp = "quantum_ads.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_ads"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

# Untyped third-party SDK boundary — isolated and relaxed.
[[tool.mypy.overrides]]
module = ["google.ads.*", "google.protobuf.*", "google.api_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "quantum_ads.connectors.google_ads.sdk"
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
addopts = "-q"
markers = ["live: hits a real Google Ads account (requires creds, run manually)"]

[tool.coverage.run]
# Omit the live-API SDK glue (covered by the gated live smoke test) and the stdio entrypoint.
omit = ["*/connectors/google_ads/sdk.py", "*/__main__.py"]
