[project]
name = "quantum-ads-mcp"
version = "0.1.0"
description = "Sovereign Google marketing agency control plane over MCP (Google Ads v24, June 2026 SOTA)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Julien Compain" }]
dependencies = [
  "fastmcp>=2.9",
  "mcp>=1.9",
  "google-ads>=27",
  "pydantic>=2.7,<3",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5",
  "pytest-mock>=3.14",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
quantum-ads-mcp = "quantum_ads.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_ads"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 (line length) is enforced for code by the formatter; allow long docstrings/strings.
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

# Untyped third-party SDK boundary — isolated and relaxed.
[[tool.mypy.overrides]]
module = [
  "google.ads.*", "google.protobuf.*", "google.api_core.*",
  "google.analytics.*", "google.cloud.*", "googleapiclient.*",
  "google_auth_oauthlib.*", "google.oauth2.*", "google.auth.*",
  "google.shopping.*", "vertexai.*", "pytrends.*",
  "looker_sdk.*", "meridian.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Live-API SDK glue: untyped boundary, smoke-gated, excluded from strict type-checking.
module = [
  "quantum_ads.connectors.google_ads.sdk",
  "quantum_ads.connectors.ga4.sdk",
  "quantum_ads.connectors.gtm.sdk",
  "quantum_ads.connectors.merchant.sdk",
  "quantum_ads.connectors.datamanager.sdk",
  "quantum_ads.connectors.searchconsole.sdk",
  "quantum_ads.connectors.youtube.sdk",
  "quantum_ads.connectors.dv360.sdk",
  "quantum_ads.connectors.cm360.sdk",
  "quantum_ads.connectors.sa360.sdk",
  "quantum_ads.connectors.bigquery.sdk",
  "quantum_ads.connectors.vertex.sdk",
  "quantum_ads.connectors.trends.sdk",
  "quantum_ads.connectors.gbp.sdk",
  "quantum_ads.connectors.looker.sdk",
  "quantum_ads.connectors.meridian.sdk",
  "quantum_ads.connectors.language.sdk",
  "quantum_ads.connectors.workspace.sdk",
  "quantum_ads.connectors.recaptcha.sdk",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-q"
markers = ["live: hits a real Google Ads account (requires creds, run manually)"]

[tool.coverage.run]
# Omit the live-API SDK glue (covered by the gated live smoke test) and the stdio entrypoint.
omit = [
  "*/connectors/google_ads/sdk.py",
  "*/connectors/ga4/sdk.py",
  "*/connectors/gtm/sdk.py",
  "*/connectors/merchant/sdk.py",
  "*/connectors/datamanager/sdk.py",
  "*/connectors/searchconsole/sdk.py",
  "*/connectors/youtube/sdk.py",
  "*/connectors/dv360/sdk.py",
  "*/connectors/cm360/sdk.py",
  "*/connectors/sa360/sdk.py",
  "*/connectors/bigquery/sdk.py",
  "*/connectors/vertex/sdk.py",
  "*/connectors/trends/sdk.py",
  "*/connectors/gbp/sdk.py",
  "*/connectors/looker/sdk.py",
  "*/connectors/meridian/sdk.py",
  "*/connectors/language/sdk.py",
  "*/connectors/workspace/sdk.py",
  "*/connectors/recaptcha/sdk.py",
  "*/__main__.py",
]
